PAL-875, updated some javadoc, replaces collections with map for consistency across test classes