@@ -20,7 +20,7 @@ import uk.gov.gchq.palisade.service.palisade.model.AuditErrorMessage;
 import uk.gov.gchq.palisade.service.palisade.model.AuditablePalisadeSystemResponse;
 import uk.gov.gchq.palisade.service.palisade.model.PalisadeClientRequest;
 
-import java.util.Collections;
+import java.util.Map;
 import java.util.UUID;
 
 public class CommonTestData {
@@ -35,12 +35,12 @@ public class CommonTestData {
         PALISADE_REQUEST = PalisadeClientRequest.Builder.create()
                 .withUserId("testUserId")
                 .withResourceId("/test/resourceId")
-                .withContext(Collections.singletonMap("purpose", "testContext"));
+                .withContext(Map.of("purpose", "testContext"));
     }
 
     static {
         AUDIT_ERROR_MESSAGE = AuditErrorMessage.Builder
-                .create(PALISADE_REQUEST, Collections.singletonMap("messages", "10")).withError(ERROR);
+                .create(PALISADE_REQUEST, Map.of("messages", "10")).withError(ERROR);
     }
 
     static {
